--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -85,7 +85,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="resume\resume.jpg" target="_blank" class="btn"><span>Resume</span>
+            <a href="\includes\resume\resume.jpg" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
